--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 MONGO_URI=mongodb+srv://user:123@cluster0.wuaqz.mongodb.net/
 PORT=5000
 JWT_SECRET: yoga
+CLOUDINARY_CLOUD_NAME=djyiw04mt
+CLOUDINARY_API_KEY=458357515354331
+CLOUDINARY_API_SECRET=4O64LegBzx87IRcfDWgiHQ5zLfQ
